--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>vue-project-1</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="bootstrap" media="screen" type="text/css">
+     <link href="css/style.css" rel="stylesheet">
+
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
 </html>
