Starting to map out the page framework.
Adding styling but not linked to project yet. Formatting the page with
header, header text, footer, and places to plug in vue apps.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-project-1</title>
+    <title>Trump Ticker Tracker</title>
     <!-- bootstrap -->
     <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -19,14 +19,26 @@
   <link href="https://fonts.googleapis.com/css?family=Arimo|Montserrat|Mukta+Vaani|Playfair+Display|Raleway|Source+Sans+Pro" rel="stylesheet">
 
   <!-- custom css -->
-  <!-- <link href="css/style.css" rel="stylesheet"> -->
+  <link href="css/style.css" rel="stylesheet">
 
 
 
 </head>
   <body>
+    <div class="header-title">Trump Ticker Tracker</div>
+    <div class="header-about">This is a short explaination of the project.</div>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- will have component for drop down menu -->
+    <!-- will have component for Compnay Name and Ticker with text about company -->
+    <!-- will have component for Tweet -->
+    <!-- will have component for stock chart (made with Highstock API) -->
+    <!-- will have component for explanatory text -->
   </body>
+  <footer>
+    <div class="footer-name">A Project by Stephanie Lamm</div>
+    <div class="footer-datasource">Stock data from TKTKTKTK Tweets from @realDonaldTrump</div>
+    <div class="footer-codesource">Stock charts made using Highstock API</div>
+  </footer>
 
 </html>
