Got Json file loading in console.
Still messing with styling.

--- a/index.html
+++ b/index.html
@@ -23,21 +23,25 @@
 </head>
 
   <body>
+    <div class="header-container">
     <div class="header-title">Trump Ticker Tracker</div>
     <div class="header-about">This is a short explaination of the project.</div>
-    <div id="app"></div>
+      </div>
+  <div id="app"></div>
     <!-- built files will be auto injected -->
     <div class="drop-down-menu">
         <!-- will have component for drop down menu -->
       </div>
+    <div class="company-container">
     <div class="company-name">
-      <h1>Boeing (BA)</h1>
+      Boeing (BA)
       <!-- will have component for Compnay Name and Ticker -->
       </div>
     <div class="company-about">
       <p>This is text about the company.</p>
       <!-- will have component with text about company under these elements -->
       </div>
+    </div>
     <div class="tweet-box">
       This is where the formatted tweet will go.
       <!-- will have component for Tweet (to left of the page) -->
@@ -52,9 +56,11 @@
     </div>
   </body>
   <footer>
-    <div class="footer-name">A Project by Stephanie Lamm</div>
-    <div class="footer-datasource">Stock data from TKTKTKTK. Tweets from @realDonaldTrump</div>
-    <div class="footer-codesource">Stock charts made using Highstock API</div>
+  <div class="footer-container">
+    <div class="footer-name">A Project by Stephanie Lamm. </div>
+    <div class="footer-datasource">Stock data from TKTKTKTK. Tweets from @realDonaldTrump.</div>
+    <div class="footer-codesource"> Stock charts made using Highstock API.</div>
+  </div>
   </footer>
 
 </html>
