--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <div class="header-container">
     <div class="header-title">Trump Ticker Tracker</div>
-    <div class="header-about">This is a short explaination of the project.</div>
+    <div class="header-about">This is a short explaination of the project. This is a short explaination of the project. This is a short explaination of the project. This is a short explaination of the project.</div>
       </div>
   <div id="app"></div>
     <!-- built files will be auto injected -->
@@ -38,7 +38,7 @@
       <!-- will have component for Compnay Name and Ticker -->
       </div>
     <div class="company-about">
-      <p>This is text about the company.</p>
+      <p>This is text about the company. This is text about the company. This is text about the company. This is text about the company. This is text about the company. This is text about the company. This is text about the company. This is text about the company. This is This is text about the company. This is text about the company. text about the company. This is text about the company. </p>
       <!-- will have component with text about company under these elements -->
       </div>
     </div>
@@ -51,7 +51,7 @@
       <!-- will have component for stock chart (made with Highstock API) (to right of the page) -->
       </div>
     <div class="explanatory-text">
-      <p>This is text explaining the tweet and its effect on stock price.</p>
+      <p>This is text explaining the tweet and its effect on stock price. This is text explaining the tweet and its effThis is text explaining the tweet and its effect on stock price. This is text explaining the tweet and its effect on stock price. This is text explaining the tweet and its effect on stock price. This is text explaining the tweet and its effect on stock price. This is text explaining the tweet and its effect on stock price. ect on stock price. This is text explaining the tweet and its effect on stock price. This is text explaining the tweet and its effect on stock price.</p>
       <!-- will have component for explanatory text (under the visual elements) -->
     </div>
   </body>
