Working on Bootstrap formatting.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 </head>
 
   <body>
-    <div id="header-container">
-    <div id="header-title">Trump Ticker Tracker</div>
-    <div id="header-about">This is a short explaination of the project. This is a short explaination of the project. This is a short explaination of the project. This is a short explaination of the project.</div>
+    <div class="container" id="header-container">
+    <div class="row" id="header-title">Trump Ticker Tracker</div>
+    <div class="row" id="header-about">This is a short explaination of the project. This is a short explaination of the project. This is a short explaination of the project. This is a short explaination of the project.</div>
       </div>
   <div id="app"></div>
     <!-- built files will be auto injected -->
@@ -35,39 +35,43 @@
 
     <div class="container" id="company-container">
       <div class="row">
-      <div class= "col" id="company-logo">
+      <div class="col-6" id="company-logo">
         <img src="static/boeing-logo.png" alt="Boeing Logo" style="width:300px;height:100px;">
         <!-- will have component for Company Logo -->
         </div>
-    <div class="col" id="company-name">
+    <div class="col-6" id="company-name">
       Boeing (BA)
       <!-- will have component for Company Name and Ticker -->
       </div>
     </div>
-    <div id="company-about">
+    <div class="row" id="company-about">
       <p>This is text about the company. This is text about the company. This is text about the company. This is text about the company. This is text about the company. This is text about the company. This is text about the company. This is text about the company. This is This is text about the company. This is text about the company. text about the company. This is text about the company. </p>
       <!-- will have component with text about company under these elements -->
       </div>
-    </div>
-    <div id="tweet-box">
+    <div class="row">
+    <div class="col-6" id="tweet-box">
       This is where the formatted tweet will go.
       <!-- will have component for Tweet (to left of the page) -->
       </div>
-    <div id="stock-chart">
+    <div class="col-6" id="stock-chart">
       This is where the stock chart will go.
       <!-- will have component for stock chart (made with Highstock API) (to right of the page) -->
       </div>
-    <div id="explanatory-text">
+        </div>
+      <div class="row" id="explanatory-text">
+      <div class="col-12">
       <p>This is text explaining the tweet and its effect on stock price. This is text explaining the tweet and its effThis is text explaining the tweet and its effect on stock price. This is text explaining the tweet and its effect on stock price. This is text explaining the tweet and its effect on stock price. This is text explaining the tweet and its effect on stock price. This is text explaining the tweet and its effect on stock price. ect on stock price. This is text explaining the tweet and its effect on stock price. This is text explaining the tweet and its effect on stock price.</p>
       <!-- will have component for explanatory text (under the visual elements) -->
     </div>
+  </div>
+  </div>
   </body>
   <footer>
-  <div class="container" id="footer-container">
+  <div class="container-fluid" id="footer-container">
     <div class="row">
-    <div class="col" id="footer-name">A Project by Stephanie Lamm. </div>
-    <div class="col" id="footer-datasource">Stock data from TKTKTKTK. Tweets from @realDonaldTrump.</div>
-    <div class="col" id="footer-codesource"> Stock charts made using Highstock API.</div>
+    <div class="col-4" id="footer-name">A Project by Stephanie Lamm. </div>
+    <div class="col-4" id="footer-datasource">Stock data from TKTKTKTK. Tweets from @realDonaldTrump.</div>
+    <div class="col-4" id="footer-codesource"> Stock charts made using Highstock API.</div>
   </div>
 </div>
   </footer>
