--- a/index.html
+++ b/index.html
@@ -55,6 +55,32 @@
       </div>
     <div class="col-6" id="stock-chart">
       This is where the stock chart will go.
+      <div id="container" style="height: 400px; min-width: 310px"></div>
+      <script>
+      $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=aapl-c.json&callback=?', function (data) {
+        // Create the chart
+      Highcharts.stockChart('container', {
+
+
+        rangeSelector: {
+            selected: 1
+        },
+
+        title: {
+            text: 'AAPL Stock Price'
+        },
+
+        series: [{
+            name: 'AAPL',
+            data: data,
+            tooltip: {
+                valueDecimals: 2
+            }
+        }]
+    });
+});
+</script>
+
       <!-- will have component for stock chart (made with Highstock API) (to right of the page) -->
       </div>
         </div>
@@ -65,6 +91,9 @@
     </div>
   </div>
   </div>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="https://code.highcharts.com/stock/highstock.js"></script>
+  <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
   </body>
   <footer>
   <div class="container-fluid" id="footer-container">
