--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <div id="app"></div>
     <!-- built files will be auto injected -->
     <div id="drop-down-menu">
+      Drop Down Menu Herey Herey Herey 
         <!-- will have component for drop down menu -->
       </div>
 
@@ -60,16 +61,12 @@
       $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=aapl-c.json&callback=?', function (data) {
         // Create the chart
       Highcharts.stockChart('container', {
-
-
         rangeSelector: {
             selected: 1
         },
-
         title: {
             text: 'AAPL Stock Price'
         },
-
         series: [{
             name: 'AAPL',
             data: data,
