--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
   <body>
+    <div id="header-bar"></div>
     <div class="container" id="header-container">
     <div class="row" id="header-title">When Trump Tweets About Public Companies</div>
     <div class="row" id="header-about">This is a short explaination of the project. This is a short explaination of the project. This is a short explaination of the project. This is a short explaination of the project.</div>
@@ -25,8 +26,7 @@
   <div id="app"></div>
     <!-- built files will be auto injected -->
     <div id="drop-down-menu">
-      <form id="demo">
-      <p>Company:
+    <p>Company:
     <select v-model="selected" class="company">
       <option value="-">Select a Company</option>
       <option value="Boeing">Boeing</option>
