Created footer component.
Also cleaned up html and styles.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>TRMP TKR TRKR</title>
-    <!-- custom css -->
-  <link href="static/mystyle.css" rel="stylesheet" type="text/css" media="screen, projection"/>
+    <title>The Trump Effect</title>
     <!-- bootstrap -->
     <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -16,20 +14,10 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Arimo|Montserrat|Mukta+Vaani|Playfair+Display|Raleway|Source+Sans+Pro" rel="stylesheet">
 </head>
-
   <body>
-
   <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
   <footer>
-  <div class="container-fluid" id="footer-container">
-    <div class="row">
-    <div class="col-lg-4" id="footer-name">A Project by Stephanie Lamm. </div>
-    <div class="col-lg-4" id="footer-datasource">Stock data from TKTKTKTK. Tweets from @realDonaldTrump.</div>
-    <div class="col-lg-4" id="footer-codesource"> Stock charts made using Highstock API.</div>
-  </div>
-</div>
   </footer>
-
 </html>
