Deleted footer component.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Arimo|Montserrat|Mukta+Vaani|Playfair+Display|Raleway|Source+Sans+Pro" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>	
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
   <body>
   <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
   <footer>
+    <div class="container-fluid footerBar footer-container">
+      <p>Copyright Stephanie Lamm</p>
+    </div>
+    <style>
+    /* Footer Styling */
+    .footer-container {
+      height: 35px;
+      background-color: #3B7B8E;
+      color: white;
+    }
+
+    </style>
   </footer>
 </html>
