Finalized and commented Intro.vue.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Arimo|Montserrat|Mukta+Vaani|Playfair+Display|Raleway|Source+Sans+Pro" rel="stylesheet">
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<div class="header-bar"></div>
 </head>
   <body>
   <div id="app"></div>
@@ -21,14 +22,17 @@
   </body>
   <footer>
     <div class="container-fluid footerBar footer-container">
-      <p>Copyright Stephanie Lamm</p>
     </div>
     <style>
+    /* Header Styling */
+    .header-bar {
+      background-color: #3B7B8E;
+      height: 35px;
+    }
     /* Footer Styling */
     .footer-container {
       height: 35px;
       background-color: #3B7B8E;
-      color: white;
     }
 
     </style>
