Working on hiding twitter box.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Arimo|Montserrat|Mukta+Vaani|Playfair+Display|Raleway|Source+Sans+Pro" rel="stylesheet">
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<div class="header-bar"></div>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!-- Header Bar -->
+<div class="header-bar">
+</div>
 </head>
   <body>
   <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
   <footer>
+    <!-- Footer Bar -->
     <div class="container-fluid footerBar footer-container">
     </div>
     <style>
@@ -34,7 +37,6 @@
       height: 35px;
       background-color: #3B7B8E;
     }
-
     </style>
   </footer>
 </html>
